--- a/docs/05_enhance_api_with_semantic_kernel/05_01.md
+++ b/docs/05_enhance_api_with_semantic_kernel/05_01.md
@@ -45,7 +45,7 @@ In exercise 3, you used the Azure OpenAI SDK to create a client capable of gener
 Add the Text Embedding Generation built-in service to the Kernel builder in the `Program.cs` file. Suppress any warnings using `# pragma` directives.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 Update the `Program.cs` file to add the built-in `TextEmbeddingGeneration` service:
 
@@ -86,7 +86,7 @@ Update the `Program.cs` file to add the built-in `TextEmbeddingGeneration` servi
 Remove the `AzureOpenAIClient` singleton service from `Program.cs`, as it will no longer be necessary.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To remove the `AzureOpenAIClient` singleton service from `Program.cs`, locate the line that starts with `builder.Services.AddSingleton<AzureOpenAIClient>` and delete that line and the code block it encapsulates.
 
@@ -97,7 +97,7 @@ To remove the `AzureOpenAIClient` singleton service from `Program.cs`, locate th
 Update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To update the `VectorizationService` primary constructor to remove the `AzureOpenAIClient` and inject the `Kernel` service, perform the following steps:
 
@@ -128,7 +128,7 @@ To update the `VectorizationService` primary constructor to remove the `AzureOpe
 Change the `GetEmbeddings` method to use the built-in vector embedding capabilities of Semantic Kernel.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 The steps to update the `VectorizationService` to use the built-in vector embedding capabilities of Semantic Kernel are:
 
@@ -164,7 +164,7 @@ The steps to update the `VectorizationService` to use the built-in vector embedd
 Test the updated `VectorizationService` by running the Streamlit dashboard and executing the following maintenance request query on the **Vector Search** page. Enter a search query of "Show me requests relating to elevator noises" with max results of ten and a minimum similarity score of 0.78.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 1. To test the updated `VectorizationService`, start the web API and run the Steamlit dashboard.
    1. In Visual Studio Code, open a new terminal window and change the directory to `scr\ContotoSuitesWebAPI`.
