--- a/docs/05_enhance_api_with_semantic_kernel/05_02.md
+++ b/docs/05_enhance_api_with_semantic_kernel/05_02.md
@@ -44,7 +44,7 @@ In this task, you will create a copilot agent to help customer service agents cr
 Configure an agent named `MaintenanceCopilot` that can be called through the ContosoSuites API by completing TODOs 1-4 defined in the `\src\ContosoSuitesWebAPI\Agents\MaintenanceCopilot.cs` file.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 The structure for the `MaintenaceCopilot` agent can be found in the `src\ConsotoSuitesWebAPI` project, but it must be configured before it will function correctly:
 
@@ -77,7 +77,7 @@ The maintenance request plugin provides kernel functions capable of creating a n
 The database plugin (in the `DatabaseService`) provides a kernel function for retrieving hotel information from the Azure SQL database.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To configure the maintenance request and database plugins:
 
@@ -184,7 +184,7 @@ The `DatabaseService` plugin was already defined in a previous exercise, so just
 Enable the `/MaintenanceCopilotChat` endpoint on the API.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To enable the `/MaintenanceCopilotChat` endpoint on the API:
 
@@ -205,7 +205,7 @@ Make sure to remove the `throw new NotImplementedException();` line, or you will
 Configure the **Copilot Chat** page as a conversational app in the Streamlit dashboard. Ensure calls to the `MaintenanceCopilotChat` API endpoint have a long enough timeout, as some database calls might take longer than the default of 10 seconds.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 1. To configure the **Copilot Chat** page as a conversational app in the Streamlit dashboard, complete `Exercise 5 Task 2 TODO #11` by setting `response` equal to the response from a POST request to the Copilot endpoint. The timeout should be set to 60 seconds or longer. The call should look like:
 
@@ -245,7 +245,7 @@ Configure the **Copilot Chat** page as a conversational app in the Streamlit das
    3. Now, ask, "Did you do that before I asked, or after?"
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To test the agent via the Streamlit **Copilot Chat** page:
 
@@ -286,7 +286,7 @@ To test the agent via the Streamlit **Copilot Chat** page:
       1. You should get a response: "The maintenance request has been saved to the database. Hotel maintenance has been notified and will address the issue in the Penthouse Suite, room 700, at the Grand Regency as soon as possible."
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
 To give your agent a persona and provide it with instructions so it behaves more consistently:
 
