--- a/docs/06_add_genai_gateway_capabilities_with_api_management/06_01.md
+++ b/docs/06_add_genai_gateway_capabilities_with_api_management/06_01.md
@@ -15,22 +15,6 @@ When developing GenAI applications, managing token consumption is crucial. The A
 
 In this task, you will import your Azure OpenAI service as an API in Azure API Management (APIM), implement a token limit policy, and emit token usage metrics to manage token consumption effectively.
 
-The key tasks are as follows:
-
-1. Import your Azure OpenAI Service resource as an API in Azure API Management.
-   - Assign a display name of "Azure OpenAI API" and a name of "azure-openai-api."
-   - Ensure APIM accesses your Azure OpenAI service using a managed identity.
-2. Define a token limit policy to protect the API from overuse and to control Azure OpenAI costs.
-   - Use a TPM value of 500 per client IP address.
-   - Factor estimated prompt tokens into rate-limiting.
-   - Add consumed and remaining token headers to API responses.
-3. Track token usage with an emit policy to log the consumed total, completion, and prompt tokens.
-   - Include custom dimensions of "API ID" and "Client IP address."
-4. Test the API and review the impact of the assigned policies.
-   - Call the chat completions API endpoint and inspect the headers and "usage" property in the response body.
-     - In the headers, locate and review the values assigned to the **consumed-tokens** and **remaining-tokens** headers added by your token limiting policy.
-     - In the response body JSON, locate and review the "usage" element appended to the response.
-   - Navigate to the Application Insights instance associated with your APIM service and use Kusto queries against the `customMetrics` table to analyze token usage per request.
 
 ## Success Criteria
 
@@ -57,47 +41,74 @@ The key tasks are as follows:
     {: .note }
     > The update may take up to 10 minutes before you see the change apply.
 
-## Solution
+## Key Tasks
+
+### 01: Import Azure OpenAI service resource
+
+Import your Azure OpenAI Service resource as an API in Azure API Management.
+
+1. Assign a display name of "Azure OpenAI API" and a name of "azure-openai-api."
+2. Ensure APIM accesses your Azure OpenAI service using a managed identity.
 
 <details markdown="block">
-<summary>Expand this section to view the solution</summary>
+<summary><strong>Expand this section to view the solution</strong></summary>
 
-- To import your Azure OpenAI service resource as an API in Azure API Management and define token limit and emit policies:
-  - Open a web browser and navigate to your Azure API Management resource in the [Azure portal](https://portal.azure.com/).
-  - Expand the APIs menu on the API Management service page and select **APIs**.
-  - On the **APIs** page, select **Add API** and select **Azure OpenAI Service** under **Create from Azure resource**.
+To import your Azure OpenAI service resource as an API in Azure API Management and define token limit and emit policies:
+  
+1. Open a web browser and navigate to your Azure API Management resource in the [Azure portal](https://portal.azure.com/).
+2. Expand the APIs menu on the API Management service page and select **APIs**.
+3. On the **APIs** page, select **Add API** and select **Azure OpenAI Service** under **Create from Azure resource**.
 
     ![The Azure OpenAI Service panel is highlighted on the Add API page of the API Management Service.](../../media/Solution/0601-apim-create-api-from-azure-resource-openai-service.png)
 
-  - On the **Create from Azure OpenAI service** **Basics** tab, set the following values:
-    - **Azure OpenAI instance**: Choose the Azure OpenAI service resource you are using for this exercise.
-    - **Azure OpenAI API version**: Accept the default value, which is the latest production-ready version.
-    - **Display name**: Enter "Azure OpenAI API."
-    - **Name**: This value with be automatically populated with "azure-openai-api," based on the display name you entered. You can edit this, but you should accept the generated value for this exercise.
-    - **Description**: This is optional, so you can leave it blank or enter a description, such as "Azure OpenAI API."
-    - **Base URL**: This will be automatically created based on the **Name** of your API. Accept the generated value.
-    - **Improve SDK compatibility**: Check this box.
-    - **Products**: Leave this empty.
-  - Select **Next: Policies** and on the **Policies** tab, define the token limit and emitting policies.
-  - To create a token limit policy, check the **Manage token consumption** box and set the following:
-    - Enter a token limit of 500 tokens per minute (TPM).
-    - Limit tokens by "IP address."
-    - Check the box to include estimated prompt tokens.
-    - Check the boxes to include the headers for the consumed and remaining tokens.
+4. On the **Create from Azure OpenAI service** **Basics** tab, set the following values:
+   - **Azure OpenAI instance**: Choose the Azure OpenAI service resource you are using for this exercise.
+   - **Azure OpenAI API version**: Accept the default value, which is the latest production-ready version.
+   - **Display name**: Enter "Azure OpenAI API."
+   - **Name**: This value with be automatically populated with "azure-openai-api," based on the display name you entered. You can edit this, but you should accept the generated value for this exercise.
+   - **Description**: This is optional, so you can leave it blank or enter a description, such as "Azure OpenAI API."
+   - **Base URL**: This will be automatically created based on the **Name** of your API. Accept the generated value.
+   - **Improve SDK compatibility**: Check this box.
+   - **Products**: Leave this empty.
+
+You will continue this work in the next key task.
+
+</details>
+
+### 02: Define token limit and emit policies
+
+Define a token limit policy to protect the API from overuse and to control Azure OpenAI costs.
+
+1. Use a TPM value of 500 per client IP address.
+2. Factor estimated prompt tokens into rate-limiting.
+3. Add consumed and remaining token headers to API responses.
+
+Then, track token usage with an emit policy to log the consumed total, completion, and prompt tokens. Be sure to include custom dimensions of "API ID" and "Client IP address."
+
+<details markdown="block">
+<summary><strong>Expand this section to view the solution</strong></summary>
+
+While still on the Basics tab, select **Next: Policies** and on the **Policies** tab and define the token limit and emitting policies.
+
+1. To create a token limit policy, check the **Manage token consumption** box and set the following:
+   1. Enter a token limit of 500 tokens per minute (TPM).
+   2. Limit tokens by "IP address."
+   3. Check the box to include estimated prompt tokens.
+   4. Check the boxes to include the headers for the consumed and remaining tokens.
 
         ![Screenshot of the configuration specified for the Manage token consumption policy.](../../media/Solution/0601-apim-define-token-limit-policy.png)
 
-  - To use the Azure OpenAI emit token policy to log the consumed total, completion, and prompt tokens, check the **Track token usage** box and configure the following:
-    - Choose the Application Insights instance associated with the resource group you are using for this exercise.
-    - Add metric dimensions for **API ID** and **Client IP address**.
+2. To use the Azure OpenAI emit token policy to log the consumed total, completion, and prompt tokens, check the **Track token usage** box and configure the following:
+   1. Choose the Application Insights instance associated with the resource group you are using for this exercise.
+   2. Add metric dimensions for **API ID** and **Client IP address**.
 
         ![Screenshot of the configuration specified for the Track token usage policy.](../../media/Solution/0601-apim-emit-token-policy.png)
 
-  - Select **Review + create**, then select **Create**. Importing your Azure OpenAI service using the above method automatically enables managed identity access to your Azure OpenAI resource from APIM.
+3. Select **Review + create**, then select **Create**. Importing your Azure OpenAI service using the above method automatically enables managed identity access to your Azure OpenAI resource from APIM.
 
     ![Screenshot of the enhanced security message displayed when creating the API in APIM, detailing the automatic use and setup of APIM's managed identity with Azure OpenAI.](../../media/Solution/0601-apim-enhanced-security-using-managed-identity.png)
 
-  - The finished policies should look like the following in the policy editor:
+4. The finished policies should look like the following in the policy editor:
 
     ```xml
     <policies>
@@ -114,15 +125,30 @@ The key tasks are as follows:
     </policies>
     ```
 
-- To test the API, select **Azure OpenAI API** from the list of APIs on your API Management service's APIs page.
-  - Select the **Test** tab, then select the **Creates a completion for the chat message** endpoint.
-  - On the **Creates a completion for the chat message** page, enter the following under **Template parameters**:
-    - **deployment-id**: Enter "gpt-4o"
-    - **api-version**: Enter "2024-06-01"
+</details>
+
+### 03: Test the API
+
+Test the API and review the impact of the assigned policies.
+
+1. Call the chat completions API endpoint and inspect the headers and "usage" property in the response body.
+   1. In the headers, locate and review the values assigned to the **consumed-tokens** and **remaining-tokens** headers added by your token limiting policy.
+   2. In the response body JSON, locate and review the "usage" element appended to the response.
+2. Navigate to the Application Insights instance associated with your APIM service and use Kusto queries against the `customMetrics` table to analyze token usage per request.
+
+<details markdown="block">
+<summary><strong>Expand this section to view the solution</strong></summary>
+
+To test the API, select **Azure OpenAI API** from the list of APIs on your API Management service's APIs page.
+
+1. Select the **Test** tab, then select the **Creates a completion for the chat message** endpoint.
+2. On the **Creates a completion for the chat message** page, enter the following under **Template parameters**:
+   1. **deployment-id**: Enter "gpt-4o"
+   2. **api-version**: Enter "2024-06-01"
 
         ![The Template parameters of deployment-id and api-version are set to gpt-4o and 2024-06-1, respectively.](../../media/Solution/0601-apim-api-test-template-parameters.png)
 
-  - Scroll down to the **Request body** section, ensure **Raw** is selected, and paste the following into the text box.
+3. Scroll down to the **Request body** section, ensure **Raw** is selected, and paste the following into the text box.
 
     ```json
     {
@@ -135,10 +161,10 @@ The key tasks are as follows:
 
     ![Screenshot of the Request body section, with the Raw radio button highlighted and the message body above highlighted in the body textbox.](../../media/Solution/0601-apim-test-request-body.png)
 
-  - Select **Send** at the bottom of the page.
-  - Scroll to the page's **HTTP response** section and review the output on the **Message** tab.
-    - In the headers, locate and review the **consumed-tokens** and **remaining-tokens** headers added by your token limiting policy.
-    - In the response body JSON, locate the "usage" element appended to the response. This element provides token usage data to help you monitor and manage your Azure OpenAI API consumption. It includes the number of tokens used for the completion and prompt and the total token consumption.
+4. Select **Send** at the bottom of the page.
+5. Scroll to the page's **HTTP response** section and review the output on the **Message** tab.
+   1. In the headers, locate and review the **consumed-tokens** and **remaining-tokens** headers added by your token limiting policy.
+   2. In the response body JSON, locate the "usage" element appended to the response. This element provides token usage data to help you monitor and manage your Azure OpenAI API consumption. It includes the number of tokens used for the completion and prompt and the total token consumption.
 
         ```json
         "usage": {
@@ -148,7 +174,7 @@ The key tasks are as follows:
         }
         ```
 
-  - Next, select **Send** several times rapidly until you see an HTTP response containing a **429 Too Many Requests** status code.
+6. Next, select **Send** several times rapidly until you see an HTTP response containing a **429 Too Many Requests** status code.
 
     The response header will look similar to the following:
 
@@ -172,29 +198,29 @@ The key tasks are as follows:
     }
     ```
 
-- To view the output of your token emitting policy, you will use Application Insights.
-  - From your API Management service in the [Azure portal](https://portal.azure.com/), expand the **Monitoring** menu and select **Application Insights**, then select your Application Insights instance from the list.
-  - On the Application Insights page, expand the **Monitoring** menu and select **Logs**.
-  - On the **Logs** page, execute the following Kusto query to look for records in the `customMetrics` table:
+7. To view the output of your token emitting policy, you will use Application Insights.
+   1. From your API Management service in the [Azure portal](https://portal.azure.com/), expand the **Monitoring** menu and select **Application Insights**, then select your Application Insights instance from the list.
+   2. On the Application Insights page, expand the **Monitoring** menu and select **Logs**.
+   3. On the **Logs** page, execute the following Kusto query to look for records in the `customMetrics` table:
 
-    ```kusto
-    customMetrics
-    | where timestamp > ago(1h)
-    | where name in ('Completion Tokens', 'Prompt Tokens', 'Total Tokens')
-    | extend
-        ItemId = substring(itemId, 24),
-        ApiId = tostring(customDimensions['API ID']),
-        ClientIpAddress = tostring(customDimensions['Client IP address'])
-    | summarize
-        CompletionTokens = sumif(value, name == 'Completion Tokens'),
-        PromptTokens = sumif(value, name == 'Prompt Tokens'),
-        TotalTokens = sumif(value, name == 'Total Tokens')
-        by ItemId, ApiId, ClientIpAddress
-    ```
+        ```kusto
+        customMetrics
+        | where timestamp > ago(1h)
+        | where name in ('Completion Tokens', 'Prompt Tokens', 'Total Tokens')
+        | extend
+            ItemId = substring(itemId, 24),
+            ApiId = tostring(customDimensions['API ID']),
+            ClientIpAddress = tostring(customDimensions['Client IP address'])
+        | summarize
+            CompletionTokens = sumif(value, name == 'Completion Tokens'),
+            PromptTokens = sumif(value, name == 'Prompt Tokens'),
+            TotalTokens = sumif(value, name == 'Total Tokens')
+            by ItemId, ApiId, ClientIpAddress
+        ```
 
-    ![The results panel of the above query is displayed, showing token usage by ItemId, ApiId, and ClientIpAddress.](../../media/Solution/0601-app-insights-custom-metrics-results.png)
+        ![The results panel of the above query is displayed, showing token usage by ItemId, ApiId, and ClientIpAddress.](../../media/Solution/0601-app-insights-custom-metrics-results.png)
 
-  - You can also visualize token consumption using a chart with the following Kusto query:
+8. You can also visualize token consumption using a chart with the following Kusto query:
 
     ```kusto
     customMetrics
